fix(table): restore default vertical alignment

--- a/src/definitions/collections/table.less
+++ b/src/definitions/collections/table.less
@@ -31,6 +31,7 @@
   box-shadow: @boxShadow;
   border-radius: @borderRadius;
   text-align: @textAlign;
+  vertical-align: @verticalAlign;
   color: @color;
   border-collapse: @borderCollapse;
   border-spacing: @borderSpacing;
